--- a/week5_assignment/week5_assignment.html
+++ b/week5_assignment/week5_assignment.html
@@ -35,11 +35,7 @@
                 끓여주는라면
             </td>
             <td>
-                <span class="star", style="
-                background-color: #fab1a0; 
-                font-weight: bold;
-                padding: 2px 4px;
-                border-radius: 5px;">베이컨김치볶음밥</span><br>
+                <span class="star">베이컨김치볶음밥</span><br>
                 조랭이미역국<br>
                 셀프라면<br>
                 끓여주는라면
