--- a/final_project/index.html
+++ b/final_project/index.html
@@ -68,7 +68,7 @@
                     <ul class="info-list">
                         <li><strong>운영시간:</strong> 평일 06:00~23:00 / 주말 09:00~18:00</li>
                         <li><strong>위치:</strong> 상명대학교 K동(체육관)</li>
-                        <li><strong>연락처:</strong> 02-2287-0000 (담당자)</li>
+                        <li><strong>담당자 연락처:</strong> 02-2287-0000 (박문기)</li>
                     </ul>
                     
                     <h3 class="card-title mt-20">트레이너 소개</h3>
@@ -82,14 +82,14 @@
                     <div class="trainer-profile">
                         <div class="photo-box"><img src="assets/images/trainer2.jpg" alt="이태현 트레이너" style="width: 80px; height: 100px;"></div>
                         <div class="profile-text">
-                            <strong>이태현 트레이너</strong>
+                            <strong>이승현 트레이너</strong>
                             <p>프로그램 설계 (ACSM)<br>근력 및 컨디셔닝 전문가 (NSCA)</p>
                         </div>
                     </div>
                     <div class="trainer-profile">
                         <div class="photo-box"><img src="assets/images/trainer3.webp" alt="박태현 트레이너" style="width: 80px; height: 100px;"></div>
                         <div class="profile-text">
-                            <strong>박태현 트레이너</strong>
+                            <strong>박문기 트레이너</strong>
                             <p>대한선수트레이너협회 (KATA)<br>재활 운동 전문가</p>
                         </div>
                     </div>
